<resources>
    <string name="app_name">Precio Gasolina México</string>
    <string name="action_settings">Widget</string>
    <string name="lb_mas">más..</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="lb_loading">Cargando...</string>
    <!--<string name="banner_ad_unit_id_main" translatable="false">ca-app-pub-3403038737253823/1270974994</string>
   <string name="banner_ad_unit_id_graph" translatable="false">ca-app-pub-3403038737253823/2747708196</string>
   <string name="banner_ad_unit_id_graph2" translatable="false">ca-app-pub-3403038737253823/6957360992</string>
   <string name="banner_ad_unit_id_calc" translatable="false">ca-app-pub-3403038737253823/4019355394</string>
   <!-e are the test id-->
   <string name="banner_ad_unit_id_main">ca-app-pub-3940256099942544/6300978111</string>
   <string name="banner_ad_unit_id_graph">ca-app-pub-3940256099942544/6300978111</string>
   <string name="banner_ad_unit_id_graph2">ca-app-pub-3940256099942544/6300978111</string>
   <string name="banner_ad_inter">ca-app-pub-3940256099942544/1033173712</string>
   <string name="banner_ad_unit_id_calc"  translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="lb_settings">Widget</string>
    <string name="pref_widget_label">Widget</string>
    <string name="pref_widget_key">Magna</string>

    <string name="pref_units_key">Magna</string>
    <string name="pref_magna_label_">Magna</string>
    <string name="pref_premium_label_">Premium</string>
    <string name="pref_diesel_label_">Diesel</string>
    <string name="dialogo_widget_setting">Configura que gasolina quieres ver en Widget de escritorio</string>

    <string name="lb_calculadora">Calculadora</string>
    <string name="lb_calcula">Calcula tu Gasto</string>
    <string name="lb_zona1">México</string>
    <string name="lb_zona2">Frontera</string>
    <string name="lb_calc_instruction1">Tipo de compra(litros o pesos)</string>
    <string name="lb_calc_instruction2">¿Qué combustible usas?</string>
    <string-array name="compra_array">
        <item>Por Litros</item>
        <item>Por Pesos</item>
    </string-array>
    <string-array name="gasolina_array">

        <item>Magna</item>
        <item>Premium</item>
        <item>Diesel</item>
    </string-array>
    <string name="number_hint1">Cantidad de litros</string>
    <string name="number_hint2">Cantidad de pesos</string>
    <string name="lb_calcular">Calcular</string>
    <string name="lb_litros">Litros</string>
    <string name="lb_precio">Precio</string>
    <string name="pref_guidewidget">Consulta el manual de tu teléfono para ver como agregar widgets a tu escritorio</string>
    <string name="whatsNewTitle">Por favor Selecciona tu Estado</string>
    <string name="ok">Ok</string>

    <!--dialogo-->

    <string name="selectEstado">Selecciona tu Estado:</string>
    <string name="selectMunicipio">Selecciona tu Municipio:</string>

    <string name="aviso_title">Aviso</string>
    <string name="aviso">Los Precios Mostrados son los proporcionados en la página de la Secretaria De Energía, no nos hacemos responsables de la NO aplicación de los precios en tu zona</string>
    <string name="entendido">Entendido</string>

    <string name="si">Si</string>
    <string name="Luego">Más tarde</string>
    <string name="gracias">Gracias por usar nuestra app!</string>
    <string name="gracias_text">Nos encantaría recibir una valoración de tu parte</string>

    <string name="topbarText">Región: México</string>
    <string name="lb_configRegion">Cambia tu región</string>

    <string name="lbchartguidance">A partir de Enero del 2017, estamos mostrando el precio promedio de todo el país</string>
    <string name="lb_aboutus">Quiénes somos</string>
    <string name="lb_MunSelect">Por disposición oficial sólo se publican los municipios con más de dos gasolineras</string>
    <string name="lb_compartir">Compartir</string>
    <string name="title_activity_fav">fav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
