<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ttpCorp.carlosguzman.preciogasolinamexico.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/lb_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_region"
        android:orderInCategory="100"
        android:title="@string/lb_configRegion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="100"
        android:title="@string/lb_aboutus"
        app:showAsAction="never" />
    <!--TODO: agregar Share button<item
        android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:title="@string/lb_compartir"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider" />-->

</menu>
