<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ttpCorp.carlosguzman.preciogasolinamexico.CalculadoraActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_result"
        android:padding="12dip"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textStyle="bold"
        android:textSize="40dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_calc_instruction1"
        android:padding="12dip"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15dp"/>


    <Spinner
        android:id="@+id/tipo_compra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/spiner_border"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="5dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_calc_instruction2"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textStyle="bold"
        android:textSize="15dp"/>
    <Spinner
        android:id="@+id/tipo_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/spiner_border"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/number_cant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spiner_border"
        android:hint="@string/number_hint1"
        android:padding="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="numberDecimal" />
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewCalc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        ads:adUnitId="@string/banner_ad_unit_id_graph2"
        ads:adSize="BANNER" />
</LinearLayout>